--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "tw:prod": "tailwindcss --output ./app/styles/tailwind.css --config ./config/tailwind.js --minify"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@remix-run/react": "^1.0.6",
     "@remix-run/serve": "^1.0.6",
     "react": "^17.0.2",
