--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@headlessui/react": "^1.4.3",
+    "@heroicons/react": "^1.0.5",
     "@remix-run/react": "^1.0.6",
     "@remix-run/serve": "^1.0.6",
+    "heroicons-react": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.0.6",
