--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
-    "@remix-run/react": "^1.0.6",
-    "@remix-run/serve": "^1.0.6",
+    "@remix-run/react": "^1.1.3",
+    "@remix-run/serve": "^1.1.3",
     "heroicons-react": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.0.6",
+    "react-select": "^5.2.2",
+    "remix": "^1.1.3",
     "tailwindcss": "^3.0.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.0.6"
+    "@remix-run/dev": "^1.1.3"
   },
   "engines": {
     "node": ">=14"
