--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "tw:prod": "tailwindcss --output ./app/styles/tailwind.css --config ./config/tailwind.js --minify"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
@@ -19,11 +21,16 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "@mui/lab": "^5.0.0-alpha.68",
+    "@mui/material": "^5.4.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
+    "date-fns": "^2.28.0",
     "heroicons-react": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-date-mask": "^2.0.0",
+    "react-input-mask": "^2.0.4",
     "react-select": "^5.2.2",
     "remix": "^1.1.3",
     "tailwindcss": "^3.0.1"
