--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/material": "^5.4.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
+    "@remix-validated-form/with-zod": "^2.0.1",
     "date-fns": "^2.28.0",
     "heroicons-react": "^1.4.1",
     "react": "^17.0.2",
@@ -34,7 +35,8 @@
     "react-input-mask": "^2.0.4",
     "react-select": "^5.2.2",
     "remix": "^1.1.3",
-    "tailwindcss": "^3.0.1"
+    "remix-validated-form": "^4.1.2",
+    "tailwindcss": "^3.0.22"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.3"
