--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.4.1",
     "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.4.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@remix-validated-form/with-zod": "^2.0.1",
-    "animated-number-react": "^0.1.2",
     "date-fns": "^2.28.0",
     "heroicons-react": "^1.4.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-bounty": "^1.0.4",
     "react-dom": "^17.0.2",
     "react-input-date-mask": "^2.0.0",
     "react-input-mask": "^2.0.4",
