--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,18 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"]
-    }
-  }
+    },
+    "forceConsistentCasingInFileNames": true,
+    "target": "es2019",
+    "lib": ["DOM", "DOM.Iterable", "ES2019"],
+    "allowJs": true,
+    "strict": true,
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "noEmit": true
+  },
+  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"]
 }
