--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@remix-validated-form/with-zod": "^2.0.1",
+    "create-remix": "^1.4.3",
     "date-fns": "^2.28.0",
     "heroicons-react": "^1.4.1",
     "prop-types": "^15.8.1",
@@ -36,12 +37,12 @@
     "react-input-date-mask": "^2.0.0",
     "react-input-mask": "^2.0.4",
     "react-select": "^5.2.2",
-    "remix": "^1.1.3",
+    "remix": "^1.4.3",
     "remix-validated-form": "^4.1.2",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.3"
+    "@remix-run/dev": "^1.4.3"
   },
   "engines": {
     "node": ">=14"
